ui/single/locals-cfg.stderr
error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:10:9
   |
10 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:20:9
   |
20 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:30:9
   |
30 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:38:9
   |
38 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:46:9
   |
46 |         FOO;
   |         ^^^ not found in this scope

error: duplicate lang item in crate `panic_halt`: `panic_impl`.
  |
  = note: first defined in crate `std`.

error: duplicate lang item in crate `panic_semihosting`: `panic_impl`.
  |
  = note: first defined in crate `panic_halt`.
